--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,6 +48,7 @@
 
 <div id="nav">
 <%= link_to 'About', about_path %><br>
+<%= link_to 'Alpha blog', articles_path %><br>
 </div>
 
 <div id="section">
