--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,67 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-/*body {
-    background: url(http://wpapers.ru/wallpapers/3d/Rendering/73/PREV_3D-%D0%90%D0%BA%D1%83%D0%BB%D0%B0.jpg) no-repeat center center fixed;
-    background-color: #95CADB
-}*/
-
-#header {
-    background-color:#95CADB;
-    color:white;
-    text-align:center;
-    padding:5px;
-}
-#nav {
-    line-height:30px;
-	height: 85vh; 
-    width:100px;
-    float:left;
-    padding:5px;
-}
-#section {
-    width:350px;
-    float:left;
-    padding-left:120px;	
-    position: ;   	 
-}
-#footer {
-    background-color:#95CADB;
-    color:white;
-    clear:both;
-    text-align:center;
-   	padding:0px;	 	 
-    position: absolute;
-  	left: 0;
-  	bottom: 0;
-  	width: 100%;
-  	height: 80px;
-}
-</style>
-</head>
-<body style="background-image:url(http://www.w3schools.com/tags/w3s.png)">
-
-<div id="header">
-<h1>This is my Home page</h1>
+<div class=" center jumbotron">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to 'Sign up now', "#", class: "btn btn-danger btn-lg btn-xlarge"  %><br>
 </div>
 
-<div id="nav">
-<%= link_to 'About', about_path %><br>
-<%= link_to 'Alpha blog', articles_path %><br>
-</div>
 
-<div id="section">
-<h2>Home page</h2>
-<p>London is the capital city of England. It is the most populous city in the United Kingdom,
-with a metropolitan area of over 13 million inhabitants.</p>
-<p>Standing on the River Thames, London has been a major settlement for two millennia,
-its history going back to its founding by the Romans, who named it Londinium.</p>
-</div>
 
-<div id="footer">
-Copyright © W3Schools.com
-</div>
-
-</body>
-</html>
